src/snapshots/afrotd__parser__tests__interpretation_html_3.3.5_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.5.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Schiedsrichter entdeckt, dass das Trikot von B10 mit Blut
            durchtränkt ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                B10 muss das Spiel verlassen, bis durch das medizinische
                Personal festgestellt wurde, ob das Trikot gewechselt werden
                muss.
            </p>
        </details>
    </div>
</article>
