src/snapshots/afrotd__parser__tests__interpretation_html_3.3.5_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.5.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Im zweiten Down wird der Team A-Ballträger inbounds gestoppt. Die
            Game Clock wird aufgrund einer Verletzung eines Team B-Spielers
            angehalten. (a) Kein anderer Spieler hat sich verletzt, (b) auch
            ein Team A-Spieler ist verletzt, (c) der Referee lässt ein
            Medien-Timeout zu.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Zur Vorbereitung der weiteren Spielfortsetzung zeigt der
                Referee an, dass bei (a), (b) und (c) die Play Clock auf 40
                Sekunden gesetzt wird. Play Clock und Game Clock starten beide
                mit dem Signal zur Ballfreigabe durch den Referee.
            </p>
        </details>
    </div>
</article>
