src/snapshots/afrotd__parser__tests__interpretation_html_3.3.5_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.5.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Spät in einer Halbzeit wird Ballträger A35 jenseits der Line to
            Gain getackelt. B79 bleibt mit einer Verletzung am Boden liegen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Es gibt keine Wahlmöglichkeit zu einem 10-Sekunden-Abzug von
                der Game Clock, da die Game Clock sowohl für den First Down als
                auch für die Verletzung angehalten wird. Die Game Clock startet
                mit der Ballfreigabe durch den Referee.
            </p>
        </details>
    </div>
</article>
