src/snapshots/afrotd__parser__tests__interpretation_html_3.3.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Am Ende eines Spieles und bei laufender Game Clock entdeckt der
            Referee, dass A22 blutet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Referee hält die Game Clock an und gibt ein
                Verletzungs-Timeout bekannt. A22 muss das Feld verlassen, damit
                er vom medizinischen Personal entsprechend versorgt werden
                kann. Solange nicht ebenfalls ein Team B Spieler verletzt
                wurde, wird die Play Clock auf 25 Sekunden gesetzt und startet
                mit der Ballfreigabe (Regel 3.2.4.c.5).
            </p>
        </details>
    </div>
</article>
