src/snapshots/afrotd__parser__tests__interpretation_html_3.3.6_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.6.X
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der B-30. Zu einem späten Zeitpunkt in der vierten
            Spielperiode vervollständigt Team A einen Vorwärtspass über die
            Mitte zu einem First Down und A88 wird inbounds an der B-15
            getackelt. A88 bleibt am Boden liegen und der Referee hält die Game
            Clock für ein Verletzungs-Timeout an. Die Game Clock steht a) bei
            0:05 oder b) bei 0:15.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                In a) hat Team B die Möglichkeit eines 10-Sekundenabzugs von
                der Game Clock. Team A kann den 10-Sekundenabzug vermeiden,
                indem es, sofern verfügbar, ein Team-Timeout verlangt. Das
                Spiel ist vorüber, wenn der 10-Sekundenabzug durchgeführt wird.
                In b) gibt es keine Möglichkeit zu einem 10-Sekundenabzug. Die
                Game Clock startet beim Signal des Referees nach dem
                Verletzungs-Timeout.
            </p>
        </details>
    </div>
</article>
