src/snapshots/afrotd__parser__tests__interpretation_html_3.3.6_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.6.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der B-30. Zu einem späten Zeitpunkt in der vierten
            Spielperiode vervollständigt Team A einen Vorwärtspass über die
            Mitte auf A88 zu einem First Down und A88 wird inbounds an der B-15
            getackelt. B27 bleibt auf dem Boden liegen und der Referee hält die
            Game Clock für ein Verletzungs-Timeout an. Die Game Clock steht a)
            bei 0:05 oder b) bei 0:15.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                a) Team A hat die Möglichkeit zu einem 10-Sekundenabzug, den es
                ablehnen kann und die Game Clock startet mit dem Snap. b) Es
                gibt keine Möglichkeit zu einem 10-Sekundenabzug. Die Game
                Clock startet nach dem Verletzungs-Timeout beim Signal des
                Referees.
            </p>
        </details>
    </div>
</article>
